tests/NormalTests/paczka1/fuzzy1/56038375.err
Error in line 2: uIVghl S172 86,2
Error in line 13: q8ibbHx S172 -2,6
Error in line 9: q8ibbHx S172 27,7
Error in line 18: S306 S580 39,7
Error in line 15: q8ibbHx A518 42,9
Error in line 19: S306 S172 74,6
Error in line 16: 3Hguc1g4wcd A518 16,4
Error in line 26: jnW98TME8T S306 50,7
